syntax = "proto3";

package zitadel.session.v2alpha;

import "google/protobuf/timestamp.proto";
import "protoc-gen-openapiv2/options/annotations.proto";
import "validate/validate.proto";

option go_package = "github.com/zitadel/zitadel/pkg/grpc/session/v2alpha;session";

message Session {
  string id = 1 [
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
      description: "\"id of the session\"";
    }
  ];
  google.protobuf.Timestamp creation_date = 2 [
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
      description: "\"time when the session was created\"";
    }
  ];
  google.protobuf.Timestamp change_date = 3 [
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
      description: "\"time when the session was last updated\"";
    }
  ];
  uint64 sequence = 4 [
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
      description: "\"sequence of the session\"";
    }
  ];
  Factors factors = 5 [
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
      description: "\"checked factors of the session, e.g. the user, password and more\"";
    }
  ];
  map<string, bytes> metadata = 6 [
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
      description: "\"custom key value list\"";
    }
  ];
}

message Factors {
  UserFactor user = 1;
  PasswordFactor password = 2;
  WebAuthNFactor web_auth_n = 3;
  IntentFactor intent = 4;
  TOTPFactor totp = 5;
  OTPFactor otp_sms = 6;
  OTPFactor otp_email = 7;
}

message UserFactor {
  google.protobuf.Timestamp verified_at = 1 [
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
      description: "\"time when the user was last checked\"";
    }
  ];
  string id = 2 [
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
      description: "\"id of the checked user\"";
    }
  ];
  string login_name = 3 [
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
      description: "\"login name of the checked user\"";
    }
  ];
  string display_name = 4 [
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
      description: "\"display name of the checked user\"";
    }
  ];
  string organisation_id = 5 [
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
      description: "\"organisation id of the checked user\"";
    }
  ];
}

message PasswordFactor {
  google.protobuf.Timestamp verified_at = 1 [
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
      description: "\"time when the password was last checked\"";
    }
  ];
}

message IntentFactor {
  google.protobuf.Timestamp verified_at = 1 [
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
      description: "\"time when an intent was last checked\"";
    }
  ];
}

message WebAuthNFactor {
  google.protobuf.Timestamp verified_at = 1 [
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
      description: "\"time when the passkey challenge was last checked\"";
    }
  ];
  bool user_verified = 2;
}

message TOTPFactor {
  google.protobuf.Timestamp verified_at = 1 [
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
      description: "\"time when the Time-based One-Time Password was last checked\"";
    }
  ];
}

message OTPFactor {
  google.protobuf.Timestamp verified_at = 1 [
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
      description: "\"time when the One-Time Password was last checked\"";
    }
  ];
}

message SearchQuery {
  oneof query {
    option (validate.required) = true;

    IDsQuery ids_query = 1;
  }
}

message IDsQuery {
  repeated string ids = 1;
}
